--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,16 @@ nav .user-area a.user-profile span {
 ul.playlist-menu li {
     padding: 0.5rem 1.3rem;
 }
+
+#main-content {
+    width: calc(100% - 230px);
+    height: calc(100vh - 100px);
+    overflow-y: auto;
+    padding: 100px 20px 20px;
+    background-color: #141922;
+}
+#main-content nav ul {
+    justify-content: space-around;
+    width: 70%;
+    margin: auto;
+}
