--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,11 +90,31 @@ a{
     font-weight: 800;
 }
 
+#upgrade-bar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: calc(100% - 230px);
+    height: 75px;
+    overflow-y: hidden;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 20px;
+    background-color: #00000080;
+}
+#upgrade-bar a.btn {
+    padding: 10px 36px;
+    border: 2px solid #fff;
+    border-radius: 1.2rem;
+    font-size: 0.8rem;
+    color: #fff;
+}
+
 nav .user-area a.user-profile span {
     background-color: #808080;
     display: inline-block;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     vertical-align: middle;
     border-radius: 50%;
     overflow: hidden;
@@ -120,3 +140,424 @@ ul.playlist-menu li {
     width: 70%;
     margin: auto;
 }
+#main-content nav ul li a.current::after {
+    display: block;
+    width: 40px;
+    border-bottom: 2px solid rgb(173, 255, 47);
+    margin-left: 1.5rem;
+}
+#main-content section h2 {
+    color: #fff;
+}
+#main-content section .columns {
+    flex-wrap: wrap;
+    margin: 2rem -0.5rem;
+}
+#main-content section .columns .col {
+    width: calc(100% / 6);
+    padding: 0 0.5rem;
+}
+#main-content section .columns .col .card {
+    margin-bottom: 1rem;
+    text-align: center;
+    cursor: pointer;
+}
+#main-content section .columns .col .card .container-card {
+    position: relative;
+    width: 90%;
+    height: 90%;
+}
+#main-content section .subtitle {
+    font-size: 0.8rem;
+    opacity: 0.5;
+    margin-top: 0.5rem;
+}
+#main-content h3 {
+    color: #fff;
+    margin-top: 10px;
+}
+
+footer {
+    background-color: #282828;
+    height: 100px;
+    overflow-y: hidden;
+    color: white;
+    padding: 0 0.5rem;
+}
+  footer .footer-side {
+    align-items: center;
+    width: 15rem;
+}
+footer .footer-side .text {
+    flex-grow: 1;
+}
+footer .footer-side .icons {
+    font-size: 0.95rem;
+    color: white;
+}
+footer .footer-side .icons i {
+    margin-left: 0.5rem;
+    cursor: pointer;
+}
+footer .footer-side .icons i.fa-list {
+    margin-left: 0;
+}
+footer .bar {
+    height: 0.25rem;
+    border-radius: 0.2rem;
+    cursor: pointer;
+}
+footer .bar.empty {
+    background-color: #5a5a5a;
+}
+footer .bar.full {
+    background-color: #c1c1c1;
+    position: relative;
+    transition: all 0.2s;
+}
+footer .footer-side .bar.empty {
+    width: 7rem;
+    margin-left: 0.7rem;
+}
+footer .footer-side .bar.full {
+    width: 35%;
+}
+footer .bar.full:after {
+    content: "";
+    display: inline-block;
+    width: 0.8rem;
+    height: 0.8rem;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(0, -50%);
+    opacity: 0;
+    transition: all 0.2s;
+}
+footer .bar:hover .bar.full {
+    background-color: #adff2f;
+}
+footer .bar:hover .bar.full:after {
+    opacity: 1;
+}
+footer .footer-player .controllers i {
+    margin: 0 0.5rem;
+    vertical-align: middle;
+    cursor: pointer;
+}
+footer .footer-player {
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+footer .footer-player .controllers i.fa-play-circle {
+    margin: 0 1.2rem;
+    transition: all 0.2s;
+}
+footer .footer-player .bar-track {
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+}
+footer .footer-player .bar-track span {
+    font-size: 0.6rem;
+}
+footer .footer-player .bar-track .bar.empty {
+    width: 75%;
+    margin: 0px 1.5rem;
+}
+footer .footer-player .bar-track .bar.full {
+    width: 20%;
+}
+
+#navigation-menu ul.main-menu li a:hover {
+    color: #fff;
+  }
+  
+  ul.playlist-menu li:hover {
+    color: #fff;
+  }
+  
+  footer .footer-side .text a:hover {
+    opacity: 1;
+    text-decoration: underline;
+  }
+  
+  footer .footer-player .controllers i.fa-play-circle:hover {
+    transform: scale(1.1);
+  }
+  
+  footer .footer-side.info-track .icons i:hover {
+    opacity: 1;
+  }
+  
+  footer .footer-side .text a:hover {
+    opacity: 1;
+    text-decoration: underline;
+  }
+  
+  #navigation-menu > div.mobilelogo {
+    display: none;
+  }
+  
+  #navigation-menu > ul.playlist-menu {
+    flex: 1;
+  }
+  
+  #navigation-menu .user-area a.install-app:hover {
+    color: #fff;
+  }
+  
+  #upgrade-bar a.btn:hover {
+    transform: scale(1.1);
+    margin-right: 1rem;
+  }
+  
+  #main-content > nav > ul > li:hover{
+  
+    color: #fff;
+  }
+  #main-content section .columns .col .card .container-img .overlay {
+    position: absolute;
+    background: #00000080;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s;
+    opacity: 0;
+  }
+  
+  #main-content section .columns .col .card:hover .container-img .overlay { 
+    opacity: 1;
+  }
+
+/*MEDIA QUERY*/
+@media only screen and (max-width: 480px) {
+    /*SMARTPHONE*/
+  
+    #navigation-menu ul.main-menu li a img {
+      width: 1.5rem;
+    }
+  
+    ul.playlist-menu li {
+      display: none;
+    }
+  
+    #navigation-menu {
+      width: 60px;
+      color: black;
+     
+    }
+  
+    #main-content {
+      width: calc(100% - 60px);
+      height: calc(100vh - 60px);
+      padding: 70px 20px 20px;
+    }
+  
+    #navigation-menu ul.main-menu li.current a {
+      color: black;
+    }
+    #navigation-menu ul.main-menu li.current {
+      border-left: 0px solid;
+    }
+  
+    #navigation-menu .logo img {
+      display: none;
+    }
+  
+    #upgrade-bar {
+      width: calc(100% - 60px);
+    }
+  
+    
+  
+    #upgrade-bar a.btn {
+      padding: 10px 10px;
+      border: 1px solid #fff;
+      border-radius: 0.9rem;
+      font-size: 0.6rem;
+  }
+  
+  #upgrade-bar {
+    height: 60px;
+  }
+  
+  
+  #navigation-menu > div.mobilelogo {
+    display: block;
+    width: 1.5rem;
+      margin-left: 1rem;
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
+  }
+  
+  
+  
+  #main-content section h2 {
+  font-size: 1.1rem;
+  }
+  
+  #main-content section .columns .col {
+    width: calc(100% / 2);
+    padding: 0 0.3rem;
+    font-size: 0.5rem;
+  }
+  
+  #main-content section .subtitle {
+    font-size: 0.5rem;
+    opacity: 0.5;
+    margin-top: 0.2rem;
+  }
+  
+  .margin-right { 
+    width: 122px;
+  }
+  
+  body > div > footer > div:nth-child(1) > img {
+    width: 30%;
+  }
+  
+  footer .footer-side .text h4 {
+    font-size: 0.5rem;
+  }
+  
+  footer .footer-side .text a {
+    font-size: 0.4rem;
+    
+  }
+  
+  footer .footer-side {
+    align-items: center;
+    width: 30%;
+  }
+  
+  footer .footer-player {
+    font-size: 0.4rem;
+    width: 40%;
+  }
+  
+  footer {
+    height: 60px;
+  }
+  
+  footer .footer-side .icons {
+    font-size: 0.4rem;
+    width: 100%;
+  }
+  
+  
+  
+  #main-content nav ul {
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    font-size: 0.6rem;
+    margin-bottom: 1.5rem;
+  }
+  
+  #main-content nav ul li {
+  margin: 0.5rem 0.1rem;
+  padding-left: 10px;
+  
+  }
+  
+  #main-content nav ul li a.current::after {
+    width: 20px;
+    margin-left: 1rem;
+  }
+  
+  #navigation-menu > div.user-area {
+    margin: 0;
+    margin-bottom: 15px;
+  }
+  
+  
+  #navigation-menu .user-area {
+   
+    margin-left: 0.1rem;
+    font-size: 5px;
+    margin-bottom: 0px;
+    color: #fff;
+  }
+  
+  #navigation-menu .user-area hr {
+    width: 10px;
+    margin-left: 10px;
+  }
+  
+  #navigation-menu .user-area a.user-profile {
+    font-size: 3px;
+    color: black;
+    margin-left: 5px;
+  }
+  
+  }
+/*TABLET*/
+  
+  @media only screen and (min-width: 482px) and (max-width: 780px) {
+    #navigation-menu .user-area {
+      margin-top: 5rem;
+      margin-left: 0.5rem;
+  }
+  #main-content section .columns .col {
+    width: calc(100% / 4);
+    padding: 0;
+    font-size: 0.7rem;
+  }
+  #main-content nav ul {
+    flex-wrap: wrap;
+    width: 95%;
+    justify-content: center;
+    font-size: 0.8rem;
+    margin-bottom: 1.5rem;
+  }
+  #main-content nav ul li {
+  padding: 0.2rem;
+  }
+  .margin-right {
+    width: 118px;
+  }
+
+  #main-content section .subtitle {
+    font-size: 0.65rem;
+    margin-top: 0.3rem;
+  }
+  
+  footer {
+    height: 60px;
+  }
+  
+  #main-content {
+    height: calc(100vh - 60px);
+  }
+  }
+  
+  @media only screen and (min-width: 781px) and (max-width: 1140px) {
+  
+    #main-content nav ul {
+      flex-wrap: wrap;
+      width: 100%;
+      
+      font-size: 0.9rem;
+      margin-bottom: 1rem;
+    }
+  
+    #main-content nav ul li {
+      padding-left: 10px;
+    }
+  
+    #main-content > section:nth-child(2) > div > div:nth-child(2) > div > div > h3 {
+      font-size: 0.8rem;
+    }
+  
+  }
+  
